# reachy-mini-hermes-agent

./: .gitignore  README.md  activate-voice-mode.sh
hermes-reachy-mini/: pyproject.toml
hermes-reachy-mini/src/hermes_reachy_mini/: __init__.py  audio.py  config.py  elevenlabs.py  interface.py  main.py  stt.py
hermes-reachy-plugin/: __init__.py  plugin.yaml  reachy_bridge.py  reachy_config.py  reachy_tools.py
skills/reachy-mini/: SKILL.md
