[project]
name = "hermes-reachy-mini"
version = "0.1.0"
description = "Reachy Mini voice interface for Hermes Agent"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini>=1.2.0",
    "openai-whisper>=20231117",
    "numpy>=1.24",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
audio = [
    "sounddevice>=0.4.6",
]
vision = [
    "reachy-mini[vision]",
]
local-stt = [
    "faster-whisper>=1.0.0",
]
cloud-stt = [
    "openai>=1.0",
]

[project.scripts]
hermes-reachy = "hermes_reachy_mini.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_reachy_mini"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
